@@ -3,6 +3,7 @@ Revision history for Perl extension App::Sqitch
 0.941
      - Fixed the "Name" header in `sqitch-rebase` so that it will actually
        show up on the CPAN search sites.
+     - Fixed test failure triggered by the passsage of time im `t/engine.t`.
 
 0.940  2012-12-04T05:49:45Z
      - Fixed tests that failed due to I18N issues, with thanks to Arnaud
